# Case122366

./: .whitesource  README.md  pyproject.toml  test  whitesource.config
