[tool.poetry]
name = "base-django-app"
version = "0.2.0"
description = ""
authors = ["STO Automation & Engineering <MDG_STO_Automation_Engineering@alteryx.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "gitlab"
# https://docs.gitlab.com/ee/user/packages/pypi_repository/#install-from-the-group-level
url = "https://git.alteryx.com/api/v4/groups/1771/-/packages/pypi/simple"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.10"
Django = "~4.2"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.1"
netaddr = "^0.8.0"
django-extensions = "^3.2.1"
django-environ = "^0.10.0"
pytest-bdd = "^6.1.1"
gunicorn = "^20.1.0"
newrelic = "^8.7.1"
django-cors-headers = "^3.14.0"
django-redis = "^5.2.0"
djangorestframework-simplejwt = "^5.2.2"
snowflake-connector-python = "^3.0.2"
psycopg2-binary = "^2.9.6"
pytest-django = "^4.5.2"
sto-ae-auth = {version = "^0.1.3", source = "gitlab"}
django-cache-memoize = "^0.1.10"
whitenoise = "^6.4.0"
django-clearcache = "^1.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
ipython = "^8.9.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | migrations
  | tests/data
  | profiling
)/
'''
include = '\.pyi?$'
line-length = 119
target-version = ['py36', 'py37', 'py38']

[tool.isort]
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = []
line_length = 119
multi_line_output = 3
profile = "black"
